<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondaryActivity"
    >

<!-- ImageView que muestra la foto del autor de la frase -->
    <ImageView
        android:id="@+id/fotoAutor"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imagenautor"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/backgrounds/scenic">

    </ImageView>
    <!-- TextView que muestra el nombre del autor de la frase -->
    <TextView
        android:id="@+id/nombreAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fotoAutor"
        android:layout_marginEnd="8dp"
        android:text="@string/nombre"
        android:textAlignment="textEnd"
        android:textColor="#333333"
        android:textSize="19sp"
        android:textStyle="bold">

    </TextView>
    <!-- TextView que muestra la frase del autor -->
    <TextView
        android:id="@+id/fraseAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombreAutor"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/frase"
        android:textColor="#1C1C1C"
        android:textSize="26sp"
        android:textStyle="italic">

    </TextView>



</RelativeLayout>